hphp/test/zend/bad/ext/date/tests/mktime-3.php.skipif
<?php echo PHP_INT_SIZE == 8 ? "skip 32-bit only" : "OK" ?>